Deployed project with tomcat7-maven-plugin